# ghana-district-capitals-api

./: .gitignore  Procfile  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/models/: district_capitals_model.py
src/routes/: district_capitals.py
src/schemes/: district_capitals_scheme.py
